--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,7 @@
   </button>
   <span>Angular CRUD using Material UI</span>
   <span class="example-spacer"></span>
-  <button mat-raised-button color="warn">Add Product</button>
+  <button mat-raised-button color="warn" (click)="openDialog()">
+    Add Product
+  </button>
 </mat-toolbar>
