--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,12 +49,30 @@
 
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
-          <td mat-cell *matCellDef="let row">{{ row.price | currency }}</td>
+          <td mat-cell *matCellDef="let row">
+            {{ row.price | currency: "INR" }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="comment">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Comment</th>
           <td mat-cell *matCellDef="let row">{{ row.comment }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
+          <td mat-cell *matCellDef="let row">
+            <button mat-icon-button color="primary" (click)="editProduct(row)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button
+              mat-icon-button
+              color="warn"
+              (click)="deleteProduct(row.id)"
+            >
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
